# PlaylistBuilder

./: .gitignore  README.md  playlist_sculptor.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
data/: .gitkeep
scripts/: run_app.sh
src/playlist_sculptor/: __init__.py  app.py  db.py  playlist_sculptor.py
tests/: test_app_functions.py  test_db.py  test_ml_functions.py
